--- a/04/index.html
+++ b/04/index.html
@@ -38,10 +38,22 @@
   <meta charset="utf-8">
 	<title>Ejercicio 04</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="../_assets/js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
   <button class="add_name">+</button>
   <ul class="names"></ul>
+<script>
+   $(function(){
+    $('.add_name').click(function(){
+     var nombre = prompt('Ingresa tu nombre')
+    })
+    $('.names').append('<li></li>')
 
+
+
+
+   });
+</script>
 </body>
 </html>
