--- a/03/index.html
+++ b/03/index.html
@@ -43,6 +43,7 @@
 	<meta charset="utf-8">
 	<title>Ejercicio 03</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0"></head>
+	<script src="../_assets/js/jquery-3.3.1.min.js"></script>
 <body>
 
 	<nav class="navbar">
@@ -60,6 +61,17 @@
 			<li><a href="#">link 9</a></li>
 		</ul>
 	</nav>
+
+	<script>
+		$(function(){
+            // $('.navbar').children("ul").children("li").eq(3).append('<ul><li><a href="#">link 4.a</a></li></ul>');
+            // $('.navbar').children("ul").children("li").eq(3).before('<li><a href="#">link 3.5</a></li>');
+
+            $('.navbar').children("ul").children("li").eq(5).prepend('😎 ')
+            $('.navbar').children("ul").children("li").eq(5).after('😊')
+
+		});
+	</script>
 
 </body>
 </html>
