--- a/05/index.html
+++ b/05/index.html
@@ -27,6 +27,7 @@
     integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp"
     crossorigin="anonymous">
   <link rel="stylesheet" href="../_assets/css/style.css">
+  <script src="../_assets/js/jquery-3.3.1.min.js"></script>
 </head>
 <body>
   <ul class="meals">
@@ -112,5 +113,13 @@
     </li>
   </ul>
 
+<script>
+  $(function(){
+$('.social__like').on("click",function(){
+  $(this).toggleClass('social__like--clicked');
+});
+
+  });
+</script>
 </body>
 </html>
